# clustering-metricate-evaluation

./: .gitignore  README.md  clustering_comparison_summary.html  create_17cluster_visualizations.py  create_degradation_visualizations.py  degradation_toolkit.py  generate_17cluster_training.py  guys_code.py  pyproject.toml  testyy.py  train_from_results.py  visualize_degradations.py
degradation_visualizations/: index.html
degradation_visualizations_17clusters/: index.html
docs/: HISTORY.md  api-reference.md  cli-reference.md  degradation-types.md  getting-started.md  index.md  input-formats.md  metrics-reference.md  quick-reference.md  training-weights.md  web-ui.md
metricate/: __init__.py
metricate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
metricate/cli/: __init__.py  main.py
metricate/comparison/: __init__.py  compare.py
metricate/core/: __init__.py  evaluator.py  exceptions.py  loader.py  metrics.py  reference.py
metricate/degradation/: __init__.py  degradation_toolkit.py  toolkit.py  visualize.py
metricate/output/: __init__.py  formatters.py  report.py
metricate/training/: __init__.py  generator.py  learner.py  normalize.py  result.py  weights.py
metricate/web/: __init__.py  app.py
outpu_test/: boundary_reassignment.html  centroid_displacement.html  core_removal.html  embedding_perturbation.html  index.html  label_swap_distant.html  label_swap_neighboring.html  label_swap_random.html  manifest.json  merge_farthest.html  merge_nearest.html  merge_random.html  noise_injection.html  random_removal.html  remove_largest_clusters.html  remove_smallest_clusters.html  remove_tightest_clusters.html  split_largest.html  split_loosest.html  split_random.html
specs/001-metricate-product/: plan.md  (+5 more)
tests/: conftest.py  test_evaluator.py  test_metrics.py
training_17clusters/: training_stats.txt
training_real_data/: learned_weights.json
visualizations/: sampled_posts_1247315_accurate_viz_2d.html
(+20 files in other folders)
